# sistemas-paralelos

./: README.md
entrega1/: README.md
entrega1/ejercicio1/: MEDICIONES.md
entrega1/ejercicio2/: MEDICIONES.md
entrega2/: CMakeLists.txt  README.md  machineFile.txt  mpi.c  secuencial.c  util.c
entrega2/include/: util.h
entrega2/tiempos/: MPI.4.1.txt  MPI.8.2.txt  MPi.4.2.txt  SECUENCIAL.txt
entrega2/tiempos/mpi/: mpi.4.1.10.txt  mpi.4.1.11.txt  mpi.4.1.12.txt  mpi.4.1.13.txt  mpi.4.1.14.txt  mpi.4.1.15.txt  mpi.4.1.16.txt  mpi.4.1.6.txt  mpi.4.1.7.txt  mpi.4.1.8.txt  mpi.4.1.9.txt  mpi.4.2.10.txt  mpi.4.2.11.txt  mpi.4.2.12.txt  mpi.4.2.13.txt  mpi.4.2.14.txt  mpi.4.2.15.txt  mpi.4.2.16.txt  mpi.4.2.6.txt  mpi.4.2.7.txt  mpi.4.2.8.txt  mpi.4.2.9.txt  mpi.8.2.10.txt  mpi.8.2.11.txt  mpi.8.2.12.txt  mpi.8.2.13.txt  mpi.8.2.14.txt  mpi.8.2.15.txt  mpi.8.2.16.txt  mpi.8.2.6.txt  mpi.8.2.7.txt  mpi.8.2.8.txt  mpi.8.2.9.txt
entrega2/tiempos/secuencial/: 10  11  12  13  14  15  16  2  3  4  5  6  7  8  9
